investigated hessian issue

--- a/examples/BMModel.ipynb
+++ b/examples/BMModel.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "Text(0.5, 1.0, 'Latent Variable(x_state) and Observation(y_meas)')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -72,11 +72,12 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "# utility for plotting\n",
     "import projplot as pjp\n",
     "\n",
     "# module containing pfjax (for now)\n",
     "import pfjax as pf\n",
-    "# utility for plotting\n",
+    "\n",
     "from pfjax.models import BMModel\n",
     "\n",
     "# initial key for random numbers\n",
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +129,7 @@
        "DeviceArray(-326.22662, dtype=float32)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +165,7 @@
        "Text(0.5, 0.98, 'Projection Plots using Closed-Form Latents')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +244,7 @@
        "Text(0.5, 0.98, 'Projection Plots using Estimated Latents')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -733,6 +734,93 @@
     "    _ax.axvline(theta[ind], color='red', lw = 0.75)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation with Particle Filter 2 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This particle filter uses the accumulator to compute the hessian/score functions for the BM Model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accumulator_score(x_prev, x_curr, y_curr, theta):\n",
+    "    measgrad_lpdf = jax.grad(bm_model.meas_lpdf, argnums=2)\n",
+    "    stategrad_lpdf = jax.grad(bm_model.state_lpdf, argnums=2)\n",
+    "    return measgrad_lpdf(y_curr, x_curr, theta) + stategrad_lpdf(x_curr, x_prev, theta)\n",
+    "\n",
+    "def accumulator_hessian(x_prev, x_curr, y_curr, theta):\n",
+    "    meashess_lpdf = jax.jacfwd(jax.jacrev(bm_model.meas_lpdf)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Incompatible shapes for broadcasting: ((100, 3), (1, 100))",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "    \u001b[0;31m[... skipping hidden 1 frame]\u001b[0m\n",
+      "File \u001b[0;32m~/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/util.py:202\u001b[0m, in \u001b[0;36mcache.<locals>.wrap.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/util.py?line=200'>201</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/util.py?line=201'>202</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m cached(config\u001b[39m.\u001b[39;49m_trace_context(), \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/util.py:195\u001b[0m, in \u001b[0;36mcache.<locals>.wrap.<locals>.cached\u001b[0;34m(_, *args, **kwargs)\u001b[0m\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/util.py?line=192'>193</a>\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mlru_cache(max_size)\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/util.py?line=193'>194</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcached\u001b[39m(_, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m--> <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/util.py?line=194'>195</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m f(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/lax/lax.py:113\u001b[0m, in \u001b[0;36m_broadcast_shapes_cached\u001b[0;34m(*shapes)\u001b[0m\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/lax/lax.py?line=110'>111</a>\u001b[0m \u001b[39m@cache\u001b[39m()\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/lax/lax.py?line=111'>112</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_broadcast_shapes_cached\u001b[39m(\u001b[39m*\u001b[39mshapes: Tuple[\u001b[39mint\u001b[39m, \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m]) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tuple[\u001b[39mint\u001b[39m, \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m]:\n\u001b[0;32m--> <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/lax/lax.py?line=112'>113</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m _broadcast_shapes_uncached(\u001b[39m*\u001b[39;49mshapes)\n",
+      "File \u001b[0;32m~/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/lax/lax.py:128\u001b[0m, in \u001b[0;36m_broadcast_shapes_uncached\u001b[0;34m(*shapes)\u001b[0m\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/lax/lax.py?line=126'>127</a>\u001b[0m \u001b[39mif\u001b[39;00m result_shape \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/lax/lax.py?line=127'>128</a>\u001b[0m   \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mIncompatible shapes for broadcasting: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/lax/lax.py?line=128'>129</a>\u001b[0m                    \u001b[39m.\u001b[39mformat(\u001b[39mtuple\u001b[39m(shape_list)))\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/lax/lax.py?line=129'>130</a>\u001b[0m \u001b[39mreturn\u001b[39;00m result_shape\n",
+      "\u001b[0;31mValueError\u001b[0m: Incompatible shapes for broadcasting: ((100, 3), (1, 100))",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/root/workspace/pfjax/examples/BMModel.ipynb Cell 29'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/root/workspace/pfjax/examples/BMModel.ipynb#ch0000033vscode-remote?line=0'>1</a>\u001b[0m temp \u001b[39m=\u001b[39m pf\u001b[39m.\u001b[39;49mparticle_filter2(theta\u001b[39m=\u001b[39;49mtheta, model\u001b[39m=\u001b[39;49mbm_model, y_meas\u001b[39m=\u001b[39;49my_meas,\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/root/workspace/pfjax/examples/BMModel.ipynb#ch0000033vscode-remote?line=1'>2</a>\u001b[0m                               n_particles\u001b[39m=\u001b[39;49m\u001b[39m100\u001b[39;49m, key\u001b[39m=\u001b[39;49mkey, history\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, accumulator\u001b[39m=\u001b[39;49maccumulator_score)\n",
+      "File \u001b[0;32m~/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py:567\u001b[0m, in \u001b[0;36mparticle_filter2\u001b[0;34m(model, key, y_meas, theta, n_particles, particle_sampler, history, accumulator)\u001b[0m\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py?line=563'>564</a>\u001b[0m     full \u001b[39m=\u001b[39m last\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py?line=564'>565</a>\u001b[0m     \u001b[39mif\u001b[39;00m has_acc:\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py?line=565'>566</a>\u001b[0m         \u001b[39m# weighted average of accumulated values\u001b[39;00m\n\u001b[0;32m--> <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py?line=566'>567</a>\u001b[0m         full[\u001b[39m\"\u001b[39m\u001b[39maccumulate_out\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m _tree_mean(\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py?line=567'>568</a>\u001b[0m             tree\u001b[39m=\u001b[39;49mfull[\u001b[39m\"\u001b[39;49m\u001b[39maccumulate_out\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py?line=568'>569</a>\u001b[0m             logw\u001b[39m=\u001b[39;49mfull[\u001b[39m\"\u001b[39;49m\u001b[39mlogw\u001b[39;49m\u001b[39m\"\u001b[39;49m]\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py?line=569'>570</a>\u001b[0m         )\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py?line=570'>571</a>\u001b[0m \u001b[39m# calculate loglikelihood\u001b[39;00m\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py?line=571'>572</a>\u001b[0m full[\u001b[39m\"\u001b[39m\u001b[39mloglik\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m last[\u001b[39m\"\u001b[39m\u001b[39mloglik\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m-\u001b[39m n_obs \u001b[39m*\u001b[39m jnp\u001b[39m.\u001b[39mlog(n_particles)\n",
+      "File \u001b[0;32m~/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py:52\u001b[0m, in \u001b[0;36m_tree_mean\u001b[0;34m(tree, logw)\u001b[0m\n\u001b[1;32m     <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py?line=46'>47</a>\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py?line=47'>48</a>\u001b[0m \u001b[39mWeighted mean of each leaf of a pytree along leading dimension.\u001b[39;00m\n\u001b[1;32m     <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py?line=48'>49</a>\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py?line=49'>50</a>\u001b[0m tree_mult \u001b[39m=\u001b[39m jtu\u001b[39m.\u001b[39mPartial(jnp\u001b[39m.\u001b[39mmultiply, x2\u001b[39m=\u001b[39m_lweight_to_prob(logw))\n\u001b[1;32m     <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py?line=50'>51</a>\u001b[0m \u001b[39mreturn\u001b[39;00m jtu\u001b[39m.\u001b[39mtree_map(jtu\u001b[39m.\u001b[39mPartial(jnp\u001b[39m.\u001b[39msum, axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m),\n\u001b[0;32m---> <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/pfjax/particle_filter.py?line=51'>52</a>\u001b[0m                     jtu\u001b[39m.\u001b[39mtree_map(tree_mult(tree)))\n",
+      "    \u001b[0;31m[... skipping hidden 14 frame]\u001b[0m\n",
+      "File \u001b[0;32m~/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/numpy/lax_numpy.py:699\u001b[0m, in \u001b[0;36m_maybe_bool_binop.<locals>.fn\u001b[0;34m(x1, x2)\u001b[0m\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/numpy/lax_numpy.py?line=697'>698</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfn\u001b[39m(x1, x2):\n\u001b[0;32m--> <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/numpy/lax_numpy.py?line=698'>699</a>\u001b[0m   x1, x2 \u001b[39m=\u001b[39m _promote_args(numpy_fn\u001b[39m.\u001b[39;49m\u001b[39m__name__\u001b[39;49m, x1, x2)\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/numpy/lax_numpy.py?line=699'>700</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m lax_fn(x1, x2) \u001b[39mif\u001b[39;00m x1\u001b[39m.\u001b[39mdtype \u001b[39m!=\u001b[39m bool_ \u001b[39melse\u001b[39;00m bool_lax_fn(x1, x2)\n",
+      "File \u001b[0;32m~/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/numpy/lax_numpy.py:579\u001b[0m, in \u001b[0;36m_promote_args\u001b[0;34m(fun_name, *args)\u001b[0m\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/numpy/lax_numpy.py?line=576'>577</a>\u001b[0m _check_arraylike(fun_name, \u001b[39m*\u001b[39margs)\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/numpy/lax_numpy.py?line=577'>578</a>\u001b[0m _check_no_float0s(fun_name, \u001b[39m*\u001b[39margs)\n\u001b[0;32m--> <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/numpy/lax_numpy.py?line=578'>579</a>\u001b[0m \u001b[39mreturn\u001b[39;00m _promote_shapes(fun_name, \u001b[39m*\u001b[39;49m_promote_dtypes(\u001b[39m*\u001b[39;49margs))\n",
+      "File \u001b[0;32m~/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/numpy/lax_numpy.py:493\u001b[0m, in \u001b[0;36m_promote_shapes\u001b[0;34m(fun_name, *args)\u001b[0m\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/numpy/lax_numpy.py?line=490'>491</a>\u001b[0m \u001b[39mif\u001b[39;00m config\u001b[39m.\u001b[39mjax_numpy_rank_promotion \u001b[39m!=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mallow\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/numpy/lax_numpy.py?line=491'>492</a>\u001b[0m   _rank_promotion_warning_or_error(fun_name, shapes)\n\u001b[0;32m--> <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/numpy/lax_numpy.py?line=492'>493</a>\u001b[0m result_shape \u001b[39m=\u001b[39m lax\u001b[39m.\u001b[39;49mbroadcast_shapes(\u001b[39m*\u001b[39;49mshapes)\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/numpy/lax_numpy.py?line=493'>494</a>\u001b[0m \u001b[39mreturn\u001b[39;00m [broadcast_to(arg, result_shape) \u001b[39mfor\u001b[39;00m arg, shp \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(args, shapes)]\n",
+      "    \u001b[0;31m[... skipping hidden 1 frame]\u001b[0m\n",
+      "File \u001b[0;32m~/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/lax/lax.py:128\u001b[0m, in \u001b[0;36m_broadcast_shapes_uncached\u001b[0;34m(*shapes)\u001b[0m\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/lax/lax.py?line=125'>126</a>\u001b[0m result_shape \u001b[39m=\u001b[39m _try_broadcast_shapes(shape_list)\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/lax/lax.py?line=126'>127</a>\u001b[0m \u001b[39mif\u001b[39;00m result_shape \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/lax/lax.py?line=127'>128</a>\u001b[0m   \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mIncompatible shapes for broadcasting: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/lax/lax.py?line=128'>129</a>\u001b[0m                    \u001b[39m.\u001b[39mformat(\u001b[39mtuple\u001b[39m(shape_list)))\n\u001b[1;32m    <a href='file:///root/workspace/pfjax/venv/lib/python3.8/site-packages/jax/_src/lax/lax.py?line=129'>130</a>\u001b[0m \u001b[39mreturn\u001b[39;00m result_shape\n",
+      "\u001b[0;31mValueError\u001b[0m: Incompatible shapes for broadcasting: ((100, 3), (1, 100))"
+     ]
+    }
+   ],
+   "source": [
+    "temp = pf.particle_filter2(theta=theta, model=bm_model, y_meas=y_meas,\n",
+    "                              n_particles=100, key=key, history=False, accumulator=accumulator_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(99, 100, 3)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp[\"accumulate_out\"].shape"
    ]
   },
   {
