--- a/examples/qm_gle.ipynb
+++ b/examples/qm_gle.ipynb
@@ -60,23 +60,23 @@
     "$$\n",
     " \n",
     "\n",
-    "Let $U_k^{(j)}(s)$ for $j \\in \\{0,1,2\\}$ be defined as\n",
+    "Let $U_{nk}^{(j)}(s)$ for $j \\in \\{0,1,2\\}$ be defined as\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "U^{(2)}_k(s) & = \\sigma_k \\Delta B_{nk}(s), \\\\\n",
-    "U^{(1)}_k(s) & = \\int_0^s U^{(2)}_k(h) \\ud h, \\\\\n",
-    "U^{(0)}_k(s) & = \\int_0^s U^{(1)}_k(h) \\ud h.\n",
+    "U^{(2)}_{nk}(s) & = \\sigma_k \\Delta B_{nk}(s), \\\\\n",
+    "U^{(1)}_{nk}(s) & = \\int_0^s U^{(2)}_{nk}(h) \\ud h, \\\\\n",
+    "U^{(0)}_{nk}(s) & = \\int_0^s U^{(1)}_{nk}(h) \\ud h.\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "Let $\\UU^{(j)}(t) = (U^{(j)}_1(t), \\ldots, U^{(j)}_K(t))$ and consider the $3m$-dimensional process $\\UU(t) = (\\UU^{(0)}(t), \\UU^{(1)}(t), \\UU^{(2)}(t))$.  Then upon letting $A_{nk} = \\mu_k V_n + \\rho_k Z_{nk}$ and $\\AA_{n} = (A_{n1}, \\ldots, A_{nK})$, we have\n",
+    "Let $\\UU_n^{(j)}(t) = (U^{(j)}_{n1}(t), \\ldots, U^{(j)}_{nK}(t))$ and consider the $3K$-dimensional process $\\UU_n(t) = (\\UU^{(0)}_n(t), \\UU^{(1)}_n(t), \\UU^{(2)}_n(t))$.  Then upon letting $A_{nk} = \\mu_k V_n + \\rho_k Z_{nk}$ and $\\AA_{n} = (A_{n1}, \\ldots, A_{nK})$, we have\n",
     "\n",
     "$$\n",
-    "\\Delta \\WW_n(s) = \\lla(\\WW_n, s) + \\tilde \\ZZ(s),\n",
+    "\\Delta \\WW_n(s) = \\lla(\\WW_n, s) + \\tilde \\ZZ_n(s),\n",
     "$$\n",
     "\n",
-    "where\n",
+    "where each of the three terms above is a $(K+2)$-dimensional process with \n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -86,19 +86,19 @@
     "-\\pot'_{\\pph}(X_n) s + \\mmu' \\left(\\ZZ_n s - \\tfrac 1 2 \\AA_n s^2 \\right) \\\\\n",
     "-\\AA_n s\n",
     "\\end{bmatrix}, & \n",
-    "\\tilde \\ZZ(s) & = \n",
+    "\\tilde \\ZZ_n(s) & = \n",
     "\\begin{bmatrix} \n",
     "\\mmu' & \\bz & \\bz \\\\\n",
     "\\bz & \\mmu' & \\bz \\\\\n",
     "\\bz & \\bz & \\Id_{K\\times K}\n",
-    "\\end{bmatrix}\\UU(s).\n",
+    "\\end{bmatrix}\\UU_n(s).\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "Note that $\\UU(s)$ is a Markov process, with $\\UU(0) = \\bz$ and\n",
+    "Note that $\\UU_n(s)$ is a Markov process, with $\\UU_n(0) = \\bz$ and\n",
     "\n",
     "$$\n",
-    "\\UU(s+h) \\mid \\Delta \\UU(s) \\sim \\N\\left\\{\\left(\\RR(h) \\otimes \\Id_{K\\times K}\\right) \\UU(s), \\SSi(h) \\otimes \\diag(\\ssi^2) \\right\\},\n",
+    "\\UU_n(s+h) \\mid \\UU_n(s) \\sim \\N\\left\\{\\left(\\RR(h) \\otimes \\Id_{K\\times K}\\right) \\UU_n(s), \\SSi(h) \\otimes \\diag(\\ssi^2) \\right\\},\n",
     "$$\n",
     "\n",
     "where \n",
@@ -120,11 +120,11 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "and where $\\otimes$ is the Kronecker matrix product.  It follows that $\\tilde \\ZZ(s)$ is also a Markov process with $\\tilde \\ZZ(s) = \\bz$ and \n",
+    "and where $\\otimes$ is the Kronecker matrix product.  It follows that $\\tilde \\ZZ_n(s)$ is also a Markov process with $\\tilde \\ZZ_n(0) = \\bz$ and \n",
     "\n",
     "$$\n",
-    "\\tilde \\ZZ(s+h) \\mid \\tilde \\ZZ(s) \\sim \n",
-    "\\N\\left( \\tilde \\RR(h) \\tilde \\ZZ(s), \\tilde \\SSi(h) \\right),\n",
+    "\\tilde \\ZZ_n(s+h) \\mid \\tilde \\ZZ_n(s) \\sim \n",
+    "\\N\\left( \\tilde \\RR(h) \\tilde \\ZZ_n(s), \\tilde \\SSi(h) \\right),\n",
     "$$\n",
     "\n",
     "where\n",
@@ -167,10 +167,10 @@
     "As described in the SDE document, the setting for parameter inference is via noisy GLE observations $\\YY = (\\YY_0, \\ldots, \\YY_N)$\n",
     "\n",
     "$$\n",
-    "\\YY_n \\ind \\N(\\AA \\XX(t_n), \\OOm),\n",
+    "\\YY_n \\ind \\N(\\AA \\WW(t_n), \\OOm),\n",
     "$$\n",
     "\n",
-    "where for simplicity we assume that $t_n = n \\dt$.  In fact, we are most interested in the case where $\\AA = \\left[\\begin{smallmatrix} 1 & \\bz \\\\ \\bz & \\bz \\end{smallmatrix}\\right]$ and $\\OOm = \\varepsilon \\AA$, which corresponds to observing $\\XX = (X_0, \\ldots, X_N)$ with very little noise.\n",
+    "where for simplicity we assume that $t_n = n \\dt$.  In fact, we are most interested in the case where $\\AA = \\left[\\begin{smallmatrix} 1 & \\bz \\\\ \\bz & \\bz \\end{smallmatrix}\\right]$ and $\\OOm = \\varepsilon \\AA$, which corresponds to observing $Y_n \\ind \\N(X_n, \\varepsilon^2)$, and letting $\\varepsilon \\to 0$.\n",
     "\n",
     "For resolution number $m \\ge 1$, let $\\WW\\up m_n$ denote the value of the SDE at time $t = n \\dt/m$, such that $\\WW\\up m_{mn} = \\WW_n = \\WW(t_n)$.  Then in the PFJAX notation we have\n",
     "\n",
@@ -180,7 +180,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "A bridge proposal for $\\xx_n$ is constructed as follows:\n",
+    "*[TBD]* A bridge proposal for $\\xx_n$ is constructed as follows:\n",
     "\n",
     "- Suppose that $\\WW\\up m_{(n-1)m+i}$ is given and we wish to draw the proposal for $\\WW\\up m_{(n-1)m+i+1}$.\n",
     "\n",
