finished prototyping particle_filter2

--- a/examples/latexdefs.tex
+++ b/examples/latexdefs.tex
@@ -67,5 +67,6 @@
 \newcommand{\lap}{\textnormal{Lap}}
 \newcommand{\ella}{\ell_{\lap}}
 \newcommand{\Lhat}{\hat {\mathcal L}}
+\newcommand{\Ell}{\mathcal{L}}
 \newcommand{\pot}{\mathcal{U}}
 \renewcommand{\vec}{\operatorname{vec}}
