adding BMModel with PF2 accumulator prototype

--- a/examples/BMModel.ipynb
+++ b/examples/BMModel.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "Text(0.5, 1.0, 'Latent Variable(x_state) and Observation(y_meas)')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "DeviceArray(-326.22662, dtype=float32)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "Text(0.5, 0.98, 'Projection Plots using Closed-Form Latents')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "Text(0.5, 0.98, 'Projection Plots using Estimated Latents')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -734,6 +734,57 @@
     "    _ax.axvline(theta[ind], color='red', lw = 0.75)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation with Particle Filter 2 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This particle filter uses the accumulator to compute the hessian/score functions for the BM Model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accumulator_score(x_prev, x_curr, y_curr, theta):\n",
+    "    measgrad_lpdf = jax.grad(bm_model.meas_lpdf, argnums=3)\n",
+    "    stategrad_lpdf = jax.grad(bm_model.state_lpdf, argnums=3)\n",
+    "    return measgrad_lpdf(y_curr, x_curr, theta) + stategrad_lpdf(x_curr, x_prev, theta)\n",
+    "\n",
+    "def accumulator_hessian(x_prev, x_curr, y_curr, theta):\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "particle_filter2() got an unexpected keyword argument 'accummulator'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/root/workspace/pfjax/examples/BMModel.ipynb Cell 29'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/root/workspace/pfjax/examples/BMModel.ipynb#ch0000033vscode-remote?line=0'>1</a>\u001b[0m temp \u001b[39m=\u001b[39m pf\u001b[39m.\u001b[39;49mparticle_filter2(theta\u001b[39m=\u001b[39;49mtheta, model\u001b[39m=\u001b[39;49mbm_model, y_meas\u001b[39m=\u001b[39;49my_meas,\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/root/workspace/pfjax/examples/BMModel.ipynb#ch0000033vscode-remote?line=1'>2</a>\u001b[0m                               n_particles\u001b[39m=\u001b[39;49m\u001b[39m100\u001b[39;49m, key\u001b[39m=\u001b[39;49mkey, history\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accummulator\u001b[39m=\u001b[39;49maccumulator_score)\n",
+      "\u001b[0;31mTypeError\u001b[0m: particle_filter2() got an unexpected keyword argument 'accummulator'"
+     ]
+    }
+   ],
+   "source": [
+    "temp = pf.particle_filter2(theta=theta, model=bm_model, y_meas=y_meas,\n",
+    "                              n_particles=100, key=key, history=True, accumulator=accumulator_score)"
    ]
   },
   {
